CC Project/kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
      - name: url-shortener
        image: url-shortener:latest
        imagePullPolicy: IfNotPresent  
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        # Add this under the containers section of your Deployment
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
          timeoutSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec:
  type: NodePort
  selector:
    app: url-shortener
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
